# minishell2

./: .gitignore  CMakeLists.txt  Makefile
includes/: message.h  minishell.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_del_str_pos.c  ft_itoa.c  ft_lstclear.c  ft_lstdup.c  ft_lstfree.c  ft_lstmatrix.c  ft_lstnew.c  ft_lstsort.c  ft_matrix_dup.c  ft_matrix_free.c  ft_matrix_len.c  ft_mem_alloc.c  ft_memcpy.c  ft_new_node.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_strjoin.c  ft_strjoin3.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strncmp.c  ft_substr.c  libft.h
libft2/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  (+3 more)
srcs/builtins/: cd.c  echo.c  env.c  exit.c  export.c  pwd.c  unset.c
srcs/core/: env_ft.c  error_msg.c  init.c  main.c  read_input.c  redirections.c  signal.c
srcs/executer/: args_list.c  exec_args.c  exec_cmd.c  here_doc.c  pipes.c
srcs/lexer/: check_args.c  check_error_pipes.c  expand.c  expand_aux.c  quotes.c  split_args.c  token.c
